Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85494

[REG: 5.14->5.15] Quick minimal browser crashes when opening view source

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.2
    • 5.15
    • WebEngine
    • None
    • Linux/X11
    • 6deddc5ecd6155c567aecd0338c53c63fa465bfd (qt/qtwebengine/5.15)

      Run quick minimal browser and open view source in the context menu:

      Crash:

      Received signal 11 SEGV_MAPERR 000000000078
      #0 0x7f03395d7499 base::debug::CollectStackTrace()
      #1 0x7f03395347c6 base::debug::StackTrace::StackTrace()
      #2 0x7f03395d795a base::debug::(anonymous namespace)::StackDumpSignalHandler()
      #3 0x7f03395d7e85 base::debug::(anonymous namespace)::StackDumpSignalHandler()
      #4 0x7f033fa27f20 <unknown>
      #5 0x7f03375beb1f QtWebEngineCore::ProfileAdapter::httpUserAgent()
      #6 0x7f03375e887a QtWebEngineCore::WebContentsAdapter::initializeRenderPrefs()
      #7 0x7f03375ec119 QtWebEngineCore::WebContentsAdapter::initialize()
      #8 0x7f03375f6cbb QtWebEngineCore::WebContentsDelegateQt::AddNewContents()
      #9 0x7f033c16d1c2 content::WebContentsImpl::ViewSource()
      #10 0x7f0341c67f11 QQuickWebEngineView::triggerWebAction()
      #11 0x7f0341c50919 QQuickWebEngineActionPrivate::trigger()
      #12 0x7f0341c50bc8 QQuickWebEngineAction::trigger()
      #13 0x7f0341c76c25 QQuickWebEngineAction::qt_static_metacall()
      #14 0x7f0341c76dc5 QQuickWebEngineAction::qt_metacall()
      #15 0x7f03401493cb QMetaObject::metacall()
      #16 0x7f0340194afd doActivate<>()
      #17 0x7f034018def7 QMetaObject::activate()
      #18 0x7f02c74bb5cd <unknown>
      #19 0x7f02c74bad9f <unknown>
      #20 0x7f0340194ab9 doActivate<>()
      #21 0x7f034018def7 QMetaObject::activate()
      #22 0x7f02c74b6dae <unknown>
      #23 0x7f02c7487dfc <unknown>
      #24 0x7f02c74945e0 <unknown>
      #25 0x7f02c74bae2c <unknown>
      #26 0x7f02c74bb509 <unknown>
      #27 0x7f0340b50eed QQmlVMEMetaObject::metaCall()
      #28 0x7f03401493ab QMetaObject::metacall()
      #29 0x7f0340bca399 QQmlObjectOrGadget::metacall()
      #30 0x7f0340a10402 CallMethod()
      #31 0x7f0340a10e9d CallPrecise()
      #32 0x7f0340a138ee QV4::QObjectMethod::callInternal()
      #33 0x7f0340a13364 QV4::QObjectMethod::virtualCall()
      #34 0x7f034094901a QV4::FunctionObject::call()
      #35 0x7f0340a41d9a QV4::Moth::VME::interpret()
      #36 0x7f0340a3db4f QV4::Moth::VME::exec()
      #37 0x7f03409b4622 QV4::ArrowFunction::virtualCall()
      #38 0x7f034094901a QV4::FunctionObject::call()
      #39 0x7f0340a41d9a QV4::Moth::VME::interpret()
      #40 0x7f0340a3db4f QV4::Moth::VME::exec()
      #41 0x7f03409b04f0 QV4::Function::call()
      #42 0x7f0340bf0a7e QQmlJavaScriptExpression::evaluate()
      #43 0x7f0340b8715b QQmlBoundSignalExpression::evaluate()
      #44 0x7f0340b877bd QQmlBoundSignal_callback()
      #45 0x7f0340bc980e QQmlNotifier::emitNotify()
      #46 0x7f0340b5991e QQmlData::signalEmitted()
      #47 0x7f03401944b6 doActivate<>()
      #48 0x7f034018df69 QMetaObject::activate()
      #49 0x7f0340b523e0 QQmlVMEMetaObject::activate()
      #50 0x7f0340b508a1 QQmlVMEMetaObject::metaCall()
      #51 0x7f03401493ab QMetaObject::metacall()
      #52 0x7f0340bca399 QQmlObjectOrGadget::metacall()
      #53 0x7f0340a102f4 CallMethod()
      #54 0x7f0340a10e3e CallPrecise()
      #55 0x7f0340a138ee QV4::QObjectMethod::callInternal()
      #56 0x7f0340a13364 QV4::QObjectMethod::virtualCall()
      #57 0x7f034094901a QV4::FunctionObject::call()
      #58 0x7f0340a41d9a QV4::Moth::VME::interpret()
      #59 0x7f0340a3db4f QV4::Moth::VME::exec()
      #60 0x7f03409b04f0 QV4::Function::call()
      #61 0x7f0340bf0a7e QQmlJavaScriptExpression::evaluate()
      #62 0x7f0340b8715b QQmlBoundSignalExpression::evaluate()
      #63 0x7f0340b877bd QQmlBoundSignal_callback()
      #64 0x7f0340bc980e QQmlNotifier::emitNotify()
      #65 0x7f0340b5991e QQmlData::signalEmitted()
      #66 0x7f03401944b6 doActivate<>()
      #67 0x7f034018def7 QMetaObject::activate()
      #68 0x7f03364ba232 QQuickMouseArea::released()
      #69 0x7f03364b8755 QQuickMouseArea::setPressed()
      #70 0x7f03364b6a52 QQuickMouseArea::mouseReleaseEvent()
      #71 0x7f033640f51a QQuickItem::event()
      #72 0x7f034013f372 QCoreApplicationPrivate::notify_helper()
      #73 0x7f034013ef5a doNotify()
      #74 0x7f034013eebe QCoreApplication::notify()
      #75 0x7f03412869a7 QGuiApplication::notify()
      #76 0x7f034013ede1 QCoreApplication::notifyInternal2()
      #77 0x7f034013f83c QCoreApplication::sendEvent()
      #78 0x7f0336438201 QQuickWindowPrivate::deliverMouseEvent()
      #79 0x7f033643b7e7 QQuickWindowPrivate::deliverPointerEvent()
      #80 0x7f033643ae77 QQuickWindowPrivate::handleMouseEvent()
      #81 0x7f033643ab7d QQuickWindow::mouseReleaseEvent()
      #82 0x7f02c74961db <unknown>
      #83 0x7f034129cd8f QWindow::event()
      #84 0x7f03364377f6 QQuickWindow::event()
      #85 0x7f02c74962f1 <unknown>
      #86 0x7f034013f372 QCoreApplicationPrivate::notify_helper()
      #87 0x7f034013ef5a doNotify()
      #88 0x7f034013eebe QCoreApplication::notify()
      #89 0x7f03412869a7 QGuiApplication::notify()
      #90 0x7f034013ede1 QCoreApplication::notifyInternal2()
      #91 0x7f034013f876 QCoreApplication::sendSpontaneousEvent()
      #92 0x7f0341287b05 QGuiApplicationPrivate::processMouseEvent()
      #93 0x7f0341286d39 QGuiApplicationPrivate::processWindowSystemEvent()
      #94 0x7f0341264970 QWindowSystemInterface::sendWindowSystemEvents()
      #95 0x7f032a943f86 xcbSourceDispatch()
      #96 0x7f03333a9417 g_main_context_dispatch
      #97 0x7f03333a9650 <unknown>
      #98 0x7f03333a96dc g_main_context_iteration
      #99 0x7f03401d9fc3 QEventDispatcherGlib::processEvents()
      #100 0x7f032a9441ba QXcbGlibEventDispatcher::processEvents()
      #101 0x7f034013b417 QEventLoop::processEvents()
      #102 0x7f034013b779 QEventLoop::exec()
      #103 0x7f034013f670 QCoreApplication::exec()
      #104 0x7f034128694c QGuiApplication::exec()
      #105 0x55a924cfbea6 main
      #106 0x7f033fa0ab97 __libc_start_main
      #107 0x55a924cfbf3a _start
        r8: 0000000000000018  r9: 000055a9283f5668 r10: 00007ffcddfd7a00 r11: 0000000000000000
       r12: 00007ffcddfd7ca0 r13: 000055a9283da9f0 r14: 00007ffcddfd7c70 r15: 00007ffcddfd7c68
        di: 00007ffcddfd7c68  si: 0000000000000000  bp: 00007ffcddfd7c40  bx: 00007ffcddfd7c68
        dx: 0000000000000000  ax: 0000000000000000  cx: 0000000000000000  sp: 00007ffcddfd7bf0
        ip: 00007f03375beb1f efl: 0000000000010246 cgf: 002b000000000033 erf: 0000000000000004
       trp: 000000000000000e msk: 0000000000000000 cr2: 0000000000000078
      [end of stack trace]
      Calling _exit(1). Core file will not be generated.
      

      Assert:

      ASSERT: "m_adapterClient" in file /home/ztamas/qt5-15/qt5-src/qtwebengine/src/core/web_contents_adapter.cpp, line 499
      Received signal 6
      #0 0x7f5a6939f475 base::debug::CollectStackTrace()
      #1 0x7f5a6918cf8b base::debug::StackTrace::StackTrace()
      #2 0x7f5a6918cf42 base::debug::StackTrace::StackTrace()
      #3 0x7f5a6939e039 base::debug::(anonymous namespace)::StackDumpSignalHandler()
      #4 0x7f5a78746fd0 <unknown>
      #5 0x7f5a78746f47 gsignal
      #6 0x7f5a787488b1 abort
      #7 0x7f5a78bd93b5 qt_message_fatal()
      #8 0x7f5a78bd599c QMessageLogger::fatal()
      #9 0x7f5a78bcc072 qt_assert()
      #10 0x7f5a636943d7 QtWebEngineCore::WebContentsAdapter::initialize()
      #11 0x7f5a6369519a QtWebEngineCore::WebContentsAdapter::loadDefault()
      #12 0x7f5a636a9403 QtWebEngineCore::WebContentsDelegateQt::AddNewContents()
      #13 0x7f5a6e460887 content::WebContentsImpl::ViewSource()
      #14 0x7f5a6de79338 content::RenderFrameHostImpl::ViewSource()
      #15 0x7f5a6369b3ca QtWebEngineCore::WebContentsAdapter::viewSource()
      #16 0x7f5a7a99068e QQuickWebEngineView::triggerWebAction()
      #17 0x7f5a7a97224c QQuickWebEngineActionPrivate::trigger()
      #18 0x7f5a7a972641 QQuickWebEngineAction::trigger()
      #19 0x7f5a7a9ab75a QQuickWebEngineAction::qt_static_metacall()
      #20 0x7f5a7a9aba05 QQuickWebEngineAction::qt_metacall()
      #21 0x7f5a78e683cb QMetaObject::metacall()
      #22 0x7f5a78eb3afd doActivate<>()
      #23 0x7f5a78eacef7 QMetaObject::activate()
      #24 0x7f59f009a5cd <unknown>
      #25 0x7f59f0099d9f <unknown>
      #26 0x7f5a78eb3ab9 doActivate<>()
      #27 0x7f5a78eacef7 QMetaObject::activate()
      #28 0x7f59f0095dae <unknown>
      #29 0x7f59f0066dfc <unknown>
      #30 0x7f59f00735e0 <unknown>
      #31 0x7f59f0099e2c <unknown>
      #32 0x7f59f009a509 <unknown>
      #33 0x7f5a7986feed QQmlVMEMetaObject::metaCall()
      #34 0x7f5a78e683ab QMetaObject::metacall()
      #35 0x7f5a798e9399 QQmlObjectOrGadget::metacall()
      #36 0x7f5a7972f402 CallMethod()
      #37 0x7f5a7972fe9d CallPrecise()
      #38 0x7f5a797328ee QV4::QObjectMethod::callInternal()
      #39 0x7f5a79732364 QV4::QObjectMethod::virtualCall()
      #40 0x7f5a7966801a QV4::FunctionObject::call()
      #41 0x7f5a79760d9a QV4::Moth::VME::interpret()
      #42 0x7f5a7975cb4f QV4::Moth::VME::exec()
      #43 0x7f5a796d3622 QV4::ArrowFunction::virtualCall()
      #44 0x7f5a7966801a QV4::FunctionObject::call()
      #45 0x7f5a79760d9a QV4::Moth::VME::interpret()
      #46 0x7f5a7975cb4f QV4::Moth::VME::exec()
      #47 0x7f5a796cf4f0 QV4::Function::call()
      #48 0x7f5a7990fa7e QQmlJavaScriptExpression::evaluate()
      #49 0x7f5a798a615b QQmlBoundSignalExpression::evaluate()
      #50 0x7f5a798a67bd QQmlBoundSignal_callback()
      #51 0x7f5a798e880e QQmlNotifier::emitNotify()
      #52 0x7f5a7987891e QQmlData::signalEmitted()
      #53 0x7f5a78eb34b6 doActivate<>()
      #54 0x7f5a78eacf69 QMetaObject::activate()
      #55 0x7f5a798713e0 QQmlVMEMetaObject::activate()
      #56 0x7f5a7986f8a1 QQmlVMEMetaObject::metaCall()
      #57 0x7f5a78e683ab QMetaObject::metacall()
      #58 0x7f5a798e9399 QQmlObjectOrGadget::metacall()
      #59 0x7f5a7972f2f4 CallMethod()
      #60 0x7f5a7972fe3e CallPrecise()
      #61 0x7f5a797328ee QV4::QObjectMethod::callInternal()
      #62 0x7f5a79732364 QV4::QObjectMethod::virtualCall()
      #63 0x7f5a7966801a QV4::FunctionObject::call()
      #64 0x7f5a79760d9a QV4::Moth::VME::interpret()
      #65 0x7f5a7975cb4f QV4::Moth::VME::exec()
      #66 0x7f5a796cf4f0 QV4::Function::call()
      #67 0x7f5a7990fa7e QQmlJavaScriptExpression::evaluate()
      #68 0x7f5a798a615b QQmlBoundSignalExpression::evaluate()
      #69 0x7f5a798a67bd QQmlBoundSignal_callback()
      #70 0x7f5a798e880e QQmlNotifier::emitNotify()
      #71 0x7f5a7987891e QQmlData::signalEmitted()
      #72 0x7f5a78eb34b6 doActivate<>()
      #73 0x7f5a78eacef7 QMetaObject::activate()
      #74 0x7f5a61a02232 QQuickMouseArea::released()
      #75 0x7f5a61a00755 QQuickMouseArea::setPressed()
      #76 0x7f5a619fea52 QQuickMouseArea::mouseReleaseEvent()
      #77 0x7f5a6195751a QQuickItem::event()
      #78 0x7f5a78e5e372 QCoreApplicationPrivate::notify_helper()
      #79 0x7f5a78e5df5a doNotify()
      #80 0x7f5a78e5debe QCoreApplication::notify()
      #81 0x7f5a79fa59a7 QGuiApplication::notify()
      #82 0x7f5a78e5dde1 QCoreApplication::notifyInternal2()
      #83 0x7f5a78e5e83c QCoreApplication::sendEvent()
      #84 0x7f5a61980201 QQuickWindowPrivate::deliverMouseEvent()
      #85 0x7f5a619837e7 QQuickWindowPrivate::deliverPointerEvent()
      #86 0x7f5a61982e77 QQuickWindowPrivate::handleMouseEvent()
      #87 0x7f5a61982b7d QQuickWindow::mouseReleaseEvent()
      #88 0x7f59f00751db <unknown>
      #89 0x7f5a79fbbd8f QWindow::event()
      #90 0x7f5a6197f7f6 QQuickWindow::event()
      #91 0x7f59f00752f1 <unknown>
      #92 0x7f5a78e5e372 QCoreApplicationPrivate::notify_helper()
      #93 0x7f5a78e5df5a doNotify()
      #94 0x7f5a78e5debe QCoreApplication::notify()
      #95 0x7f5a79fa59a7 QGuiApplication::notify()
      #96 0x7f5a78e5dde1 QCoreApplication::notifyInternal2()
      #97 0x7f5a78e5e876 QCoreApplication::sendSpontaneousEvent()
      #98 0x7f5a79fa6b05 QGuiApplicationPrivate::processMouseEvent()
      #99 0x7f5a79fa5d39 QGuiApplicationPrivate::processWindowSystemEvent()
      #100 0x7f5a79f83970 QWindowSystemInterface::sendWindowSystemEvents()
      #101 0x7f5a5657cf86 xcbSourceDispatch()
      #102 0x7f5a5e8f1417 g_main_context_dispatch
      #103 0x7f5a5e8f1650 <unknown>
      #104 0x7f5a5e8f16dc g_main_context_iteration
      #105 0x7f5a78ef8fc3 QEventDispatcherGlib::processEvents()
      #106 0x7f5a5657d1ba QXcbGlibEventDispatcher::processEvents()
      #107 0x7f5a78e5a417 QEventLoop::processEvents()
      #108 0x7f5a78e5a779 QEventLoop::exec()
      #109 0x7f5a78e5e670 QCoreApplication::exec()
      #110 0x7f5a79fa594c QGuiApplication::exec()
      #111 0x5602cb3db3a6 main
      #112 0x7f5a78729b97 __libc_start_main
      #113 0x5602cb3db0aa _start
        r8: 0000000000000000  r9: 00007ffc97d2fc90 r10: 0000000000000008 r11: 0000000000000246
       r12: 00007f5a6e450438 r13: 00005602cbda24b8 r14: 00005602cbe1a190 r15: 0000000000000000
        di: 0000000000000002  si: 00007ffc97d2fc90  bp: 00007ffc97d2ff00  bx: 00005602cda3ddf0
        dx: 0000000000000000  ax: 0000000000000000  cx: 00007f5a78746f47  sp: 00007ffc97d2fc90
        ip: 00007f5a78746f47 efl: 0000000000000246 cgf: 002b000000000033 erf: 0000000000000000
       trp: 0000000000000000 msk: 0000000000000000 cr2: 0000000000000000
      [end of stack trace]
      Calling _exit(1). Core file will not be generated.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ztamas Tamas Zakor
            ztamas Tamas Zakor
            Votes:
            6 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes