Ignore QQuickWebEngineNewViewRequest if it is unhandled

This is the case when the WebEngineNewViewRequest.openIn()
is not called on newViewRequested().

For example, when opening the view source from context
menu in quick minimal example.

Fixes: QTBUG-85494
Change-Id: I7c1ae53684361de459b2f268e471904e632821b0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>